fixing spacing of printed roster

--- a/src/App.css
+++ b/src/App.css
@@ -256,6 +256,7 @@ input[type="date"]:focus::-webkit-datetime-edit {
 .player-header {
   font-weight: bold;
   font-size: 15px;
+  padding: 10px;
 }
 
 .btn-secondary:hover {
